Kaggle Notebook | notebookd0afd5fffc | Version 9

--- a/jumi_titanic_kaggle.ipynb
+++ b/jumi_titanic_kaggle.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dabc9053",
+   "id": "605dff1b",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-07-06T05:39:01.807385Z",
-     "iopub.status.busy": "2022-07-06T05:39:01.806930Z",
-     "iopub.status.idle": "2022-07-06T05:39:01.823264Z",
-     "shell.execute_reply": "2022-07-06T05:39:01.822049Z"
+     "iopub.execute_input": "2022-07-07T06:40:06.877290Z",
+     "iopub.status.busy": "2022-07-07T06:40:06.876692Z",
+     "iopub.status.idle": "2022-07-07T06:40:06.896052Z",
+     "shell.execute_reply": "2022-07-07T06:40:06.894991Z"
     },
     "papermill": {
-     "duration": 0.030677,
-     "end_time": "2022-07-06T05:39:01.827846",
+     "duration": 0.035486,
+     "end_time": "2022-07-07T06:40:06.899898",
      "exception": false,
-     "start_time": "2022-07-06T05:39:01.797169",
+     "start_time": "2022-07-07T06:40:06.864412",
      "status": "completed"
     },
     "tags": []
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c470599c",
+   "id": "3e7525c0",
    "metadata": {
     "papermill": {
-     "duration": 0.006468,
-     "end_time": "2022-07-06T05:39:01.841780",
+     "duration": 0.00819,
+     "end_time": "2022-07-07T06:40:06.916174",
      "exception": false,
-     "start_time": "2022-07-06T05:39:01.835312",
+     "start_time": "2022-07-07T06:40:06.907984",
      "status": "completed"
     },
     "tags": []
@@ -74,13 +74,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da85f380",
+   "id": "dc521141",
    "metadata": {
     "papermill": {
-     "duration": 0.006103,
-     "end_time": "2022-07-06T05:39:01.854588",
+     "duration": 0.007135,
+     "end_time": "2022-07-07T06:40:06.931254",
      "exception": false,
-     "start_time": "2022-07-06T05:39:01.848485",
+     "start_time": "2022-07-07T06:40:06.924119",
      "status": "completed"
     },
     "tags": []
@@ -91,13 +91,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9c10856",
+   "id": "aef03549",
    "metadata": {
     "papermill": {
-     "duration": 0.006326,
-     "end_time": "2022-07-06T05:39:01.867761",
+     "duration": 0.006901,
+     "end_time": "2022-07-07T06:40:06.945743",
      "exception": false,
-     "start_time": "2022-07-06T05:39:01.861435",
+     "start_time": "2022-07-07T06:40:06.938842",
      "status": "completed"
     },
     "tags": []
@@ -114,19 +114,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dc9cd011",
+   "id": "1223d377",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-06T05:39:01.882971Z",
-     "iopub.status.busy": "2022-07-06T05:39:01.882619Z",
-     "iopub.status.idle": "2022-07-06T05:39:03.121369Z",
-     "shell.execute_reply": "2022-07-06T05:39:03.119811Z"
+     "iopub.execute_input": "2022-07-07T06:40:06.963795Z",
+     "iopub.status.busy": "2022-07-07T06:40:06.962897Z",
+     "iopub.status.idle": "2022-07-07T06:40:08.548428Z",
+     "shell.execute_reply": "2022-07-07T06:40:08.546747Z"
     },
     "papermill": {
-     "duration": 1.24992,
-     "end_time": "2022-07-06T05:39:03.124464",
+     "duration": 1.598745,
+     "end_time": "2022-07-07T06:40:08.552076",
      "exception": false,
-     "start_time": "2022-07-06T05:39:01.874544",
+     "start_time": "2022-07-07T06:40:06.953331",
      "status": "completed"
     },
     "tags": []
@@ -169,13 +169,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "887b1741",
+   "id": "95367cc6",
    "metadata": {
     "papermill": {
-     "duration": 0.006042,
-     "end_time": "2022-07-06T05:39:03.136872",
+     "duration": 0.00775,
+     "end_time": "2022-07-07T06:40:08.567983",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.130830",
+     "start_time": "2022-07-07T06:40:08.560233",
      "status": "completed"
     },
     "tags": []
@@ -192,13 +192,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f97b0feb",
+   "id": "d8fd6097",
    "metadata": {
     "papermill": {
-     "duration": 0.006027,
-     "end_time": "2022-07-06T05:39:03.149298",
+     "duration": 0.007047,
+     "end_time": "2022-07-07T06:40:08.583125",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.143271",
+     "start_time": "2022-07-07T06:40:08.576078",
      "status": "completed"
     },
     "tags": []
@@ -215,19 +215,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cba2ab78",
+   "id": "fdba1e2f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-06T05:39:03.164096Z",
-     "iopub.status.busy": "2022-07-06T05:39:03.163683Z",
-     "iopub.status.idle": "2022-07-06T05:39:03.195834Z",
-     "shell.execute_reply": "2022-07-06T05:39:03.194895Z"
+     "iopub.execute_input": "2022-07-07T06:40:08.601601Z",
+     "iopub.status.busy": "2022-07-07T06:40:08.600629Z",
+     "iopub.status.idle": "2022-07-07T06:40:08.638209Z",
+     "shell.execute_reply": "2022-07-07T06:40:08.636594Z"
     },
     "papermill": {
-     "duration": 0.04299,
-     "end_time": "2022-07-06T05:39:03.198584",
+     "duration": 0.051361,
+     "end_time": "2022-07-07T06:40:08.641844",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.155594",
+     "start_time": "2022-07-07T06:40:08.590483",
      "status": "completed"
     },
     "tags": []
@@ -241,19 +241,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aa68ac11",
+   "id": "9b73e683",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-06T05:39:03.213751Z",
-     "iopub.status.busy": "2022-07-06T05:39:03.212968Z",
-     "iopub.status.idle": "2022-07-06T05:39:03.238815Z",
-     "shell.execute_reply": "2022-07-06T05:39:03.237524Z"
+     "iopub.execute_input": "2022-07-07T06:40:08.659906Z",
+     "iopub.status.busy": "2022-07-07T06:40:08.659423Z",
+     "iopub.status.idle": "2022-07-07T06:40:08.690034Z",
+     "shell.execute_reply": "2022-07-07T06:40:08.688932Z"
     },
     "papermill": {
-     "duration": 0.03634,
-     "end_time": "2022-07-06T05:39:03.241440",
+     "duration": 0.042517,
+     "end_time": "2022-07-07T06:40:08.692340",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.205100",
+     "start_time": "2022-07-07T06:40:08.649823",
      "status": "completed"
     },
     "tags": []
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd4d99f4",
+   "id": "1634101d",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-07-05T06:03:42.064143Z",
@@ -419,10 +419,10 @@
      "shell.execute_reply.started": "2022-07-05T06:03:42.06397Z"
     },
     "papermill": {
-     "duration": 0.006365,
-     "end_time": "2022-07-06T05:39:03.254661",
+     "duration": 0.007137,
+     "end_time": "2022-07-07T06:40:08.707715",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.248296",
+     "start_time": "2022-07-07T06:40:08.700578",
      "status": "completed"
     },
     "tags": []
@@ -433,13 +433,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c12b5a90",
+   "id": "56970ce6",
    "metadata": {
     "papermill": {
-     "duration": 0.006399,
-     "end_time": "2022-07-06T05:39:03.267708",
+     "duration": 0.007874,
+     "end_time": "2022-07-07T06:40:08.723751",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.261309",
+     "start_time": "2022-07-07T06:40:08.715877",
      "status": "completed"
     },
     "tags": []
@@ -461,13 +461,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac4d945c",
+   "id": "bde907b6",
    "metadata": {
     "papermill": {
-     "duration": 0.006307,
-     "end_time": "2022-07-06T05:39:03.280620",
+     "duration": 0.00773,
+     "end_time": "2022-07-07T06:40:08.740061",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.274313",
+     "start_time": "2022-07-07T06:40:08.732331",
      "status": "completed"
     },
     "tags": []
@@ -480,19 +480,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4f5348e7",
+   "id": "d5fc2d7f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-06T05:39:03.296089Z",
-     "iopub.status.busy": "2022-07-06T05:39:03.295160Z",
-     "iopub.status.idle": "2022-07-06T05:39:03.340522Z",
-     "shell.execute_reply": "2022-07-06T05:39:03.339399Z"
+     "iopub.execute_input": "2022-07-07T06:40:08.759619Z",
+     "iopub.status.busy": "2022-07-07T06:40:08.758623Z",
+     "iopub.status.idle": "2022-07-07T06:40:08.818817Z",
+     "shell.execute_reply": "2022-07-07T06:40:08.816993Z"
     },
     "papermill": {
-     "duration": 0.055576,
-     "end_time": "2022-07-06T05:39:03.342917",
+     "duration": 0.07385,
+     "end_time": "2022-07-07T06:40:08.822616",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.287341",
+     "start_time": "2022-07-07T06:40:08.748766",
      "status": "completed"
     },
     "tags": []
@@ -654,13 +654,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a057ccf4",
+   "id": "3cca307d",
    "metadata": {
     "papermill": {
-     "duration": 0.006818,
-     "end_time": "2022-07-06T05:39:03.356814",
+     "duration": 0.007944,
+     "end_time": "2022-07-07T06:40:08.838775",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.349996",
+     "start_time": "2022-07-07T06:40:08.830831",
      "status": "completed"
     },
     "tags": []
@@ -672,13 +672,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cf1b2f7",
+   "id": "59227311",
    "metadata": {
     "papermill": {
-     "duration": 0.006791,
-     "end_time": "2022-07-06T05:39:03.370730",
+     "duration": 0.008836,
+     "end_time": "2022-07-07T06:40:08.856529",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.363939",
+     "start_time": "2022-07-07T06:40:08.847693",
      "status": "completed"
     },
     "tags": []
@@ -690,19 +690,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "27faed0c",
+   "id": "152f8402",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-06T05:39:03.387796Z",
-     "iopub.status.busy": "2022-07-06T05:39:03.386630Z",
-     "iopub.status.idle": "2022-07-06T05:39:03.398189Z",
-     "shell.execute_reply": "2022-07-06T05:39:03.397117Z"
+     "iopub.execute_input": "2022-07-07T06:40:08.877063Z",
+     "iopub.status.busy": "2022-07-07T06:40:08.876521Z",
+     "iopub.status.idle": "2022-07-07T06:40:08.892301Z",
+     "shell.execute_reply": "2022-07-07T06:40:08.889371Z"
     },
     "papermill": {
-     "duration": 0.023803,
-     "end_time": "2022-07-06T05:39:03.401535",
+     "duration": 0.030952,
+     "end_time": "2022-07-07T06:40:08.895966",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.377732",
+     "start_time": "2022-07-07T06:40:08.865014",
      "status": "completed"
     },
     "tags": []
@@ -740,19 +740,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "23029324",
+   "id": "2d284e02",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-06T05:39:03.419582Z",
-     "iopub.status.busy": "2022-07-06T05:39:03.418930Z",
-     "iopub.status.idle": "2022-07-06T05:39:03.429494Z",
-     "shell.execute_reply": "2022-07-06T05:39:03.428099Z"
+     "iopub.execute_input": "2022-07-07T06:40:08.915890Z",
+     "iopub.status.busy": "2022-07-07T06:40:08.914970Z",
+     "iopub.status.idle": "2022-07-07T06:40:08.928343Z",
+     "shell.execute_reply": "2022-07-07T06:40:08.926110Z"
     },
     "papermill": {
-     "duration": 0.022628,
-     "end_time": "2022-07-06T05:39:03.432388",
+     "duration": 0.028329,
+     "end_time": "2022-07-07T06:40:08.932660",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.409760",
+     "start_time": "2022-07-07T06:40:08.904331",
      "status": "completed"
     },
     "tags": []
@@ -786,13 +786,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8744aac0",
+   "id": "b6f87dc3",
    "metadata": {
     "papermill": {
-     "duration": 0.006958,
-     "end_time": "2022-07-06T05:39:03.447265",
+     "duration": 0.008034,
+     "end_time": "2022-07-07T06:40:08.950213",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.440307",
+     "start_time": "2022-07-07T06:40:08.942179",
      "status": "completed"
     },
     "tags": []
@@ -805,19 +805,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d3f3f51b",
+   "id": "fcb3e635",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-06T05:39:03.463672Z",
-     "iopub.status.busy": "2022-07-06T05:39:03.463292Z",
-     "iopub.status.idle": "2022-07-06T05:39:03.864223Z",
-     "shell.execute_reply": "2022-07-06T05:39:03.862980Z"
+     "iopub.execute_input": "2022-07-07T06:40:08.971468Z",
+     "iopub.status.busy": "2022-07-07T06:40:08.970890Z",
+     "iopub.status.idle": "2022-07-07T06:40:09.455205Z",
+     "shell.execute_reply": "2022-07-07T06:40:09.453295Z"
     },
     "papermill": {
-     "duration": 0.412463,
-     "end_time": "2022-07-06T05:39:03.866962",
+     "duration": 0.498438,
+     "end_time": "2022-07-07T06:40:09.458022",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.454499",
+     "start_time": "2022-07-07T06:40:08.959584",
      "status": "completed"
     },
     "tags": []
@@ -859,13 +859,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3882771a",
+   "id": "d87a26d9",
    "metadata": {
     "papermill": {
-     "duration": 0.008047,
-     "end_time": "2022-07-06T05:39:03.883214",
+     "duration": 0.009399,
+     "end_time": "2022-07-07T06:40:09.477641",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.875167",
+     "start_time": "2022-07-07T06:40:09.468242",
      "status": "completed"
     },
     "tags": []
@@ -879,19 +879,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "23c9dea0",
+   "id": "809d43a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-06T05:39:03.901305Z",
-     "iopub.status.busy": "2022-07-06T05:39:03.900894Z",
-     "iopub.status.idle": "2022-07-06T05:39:04.222697Z",
-     "shell.execute_reply": "2022-07-06T05:39:04.221384Z"
+     "iopub.execute_input": "2022-07-07T06:40:09.500443Z",
+     "iopub.status.busy": "2022-07-07T06:40:09.499880Z",
+     "iopub.status.idle": "2022-07-07T06:40:09.894703Z",
+     "shell.execute_reply": "2022-07-07T06:40:09.893242Z"
     },
     "papermill": {
-     "duration": 0.33493,
-     "end_time": "2022-07-06T05:39:04.226191",
+     "duration": 0.410336,
+     "end_time": "2022-07-07T06:40:09.898112",
      "exception": false,
-     "start_time": "2022-07-06T05:39:03.891261",
+     "start_time": "2022-07-07T06:40:09.487776",
      "status": "completed"
     },
     "tags": []
@@ -922,24 +922,31 @@
     "# 둘 다 가로 18, 세로8 사이즈로 그려라는 뜻이고, 1,2는 1행 2열 배치로 그릴거라는 뜻임...\n",
     "\n",
     "df_train['Survived'].value_counts().plot.pie(explode = [0, 0.1], autopct = '%1.1f%%', ax = ax[0], shadow = True)\n",
-    "\n",
+    "# df_train의 특정 컬럼 'Survived' 의 데이터를 세어줌. plot.pie = 원형 차트 (파이차트) 생성 \n",
+    "# explode = 부채꼴이 파이 차트의 중심에서 벗어나는 정도를 설정\n",
+    "# autopct = 부채꼴 안에 표시될 숫자의 형식 지정. 소숫점 한자리까지 출력하도록 한것\n",
+    "# ax = ax[0] : 첫번째 차트? (설명필요)\n",
+    "# shadow = True : 파이차트 내에 그림자가 표시\n",
     "ax[0].set_title('Pie plot - Survived')\n",
+    "# \n",
     "ax[0].set_ylabel('')\n",
+    "# \n",
     "sns.countplot('Survived', data = df_train, ax = ax[1])\n",
+    "# \n",
     "ax[1].set_title('Count plot - Survived')\n",
-    "\n",
+    "# \n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "20603665",
+   "id": "00756243",
    "metadata": {
     "papermill": {
-     "duration": 0.008826,
-     "end_time": "2022-07-06T05:39:04.244707",
+     "duration": 0.010287,
+     "end_time": "2022-07-07T06:40:09.919193",
      "exception": false,
-     "start_time": "2022-07-06T05:39:04.235881",
+     "start_time": "2022-07-07T06:40:09.908906",
      "status": "completed"
     },
     "tags": []
@@ -952,13 +959,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "477d9a50",
+   "id": "4ee8ce31",
    "metadata": {
     "papermill": {
-     "duration": 0.009491,
-     "end_time": "2022-07-06T05:39:04.263498",
+     "duration": 0.010055,
+     "end_time": "2022-07-07T06:40:09.940029",
      "exception": false,
-     "start_time": "2022-07-06T05:39:04.254007",
+     "start_time": "2022-07-07T06:40:09.929974",
      "status": "completed"
     },
     "tags": []
@@ -971,13 +978,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c7f56fb",
+   "id": "71dff52d",
    "metadata": {
     "papermill": {
-     "duration": 0.008723,
-     "end_time": "2022-07-06T05:39:04.281363",
+     "duration": 0.011443,
+     "end_time": "2022-07-07T06:40:09.962824",
      "exception": false,
-     "start_time": "2022-07-06T05:39:04.272640",
+     "start_time": "2022-07-07T06:40:09.951381",
      "status": "completed"
     },
     "tags": []
@@ -993,13 +1000,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64d1640d",
+   "id": "9ec78ae9",
    "metadata": {
     "papermill": {
-     "duration": 0.009205,
-     "end_time": "2022-07-06T05:39:04.299593",
+     "duration": 0.010864,
+     "end_time": "2022-07-07T06:40:09.984850",
      "exception": false,
-     "start_time": "2022-07-06T05:39:04.290388",
+     "start_time": "2022-07-07T06:40:09.973986",
      "status": "completed"
     },
     "tags": []
@@ -1028,14 +1035,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.697819,
-   "end_time": "2022-07-06T05:39:05.030595",
+   "duration": 19.059458,
+   "end_time": "2022-07-07T06:40:11.125212",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-07-06T05:38:51.332776",
+   "start_time": "2022-07-07T06:39:52.065754",
    "version": "2.3.4"
   }
  },
